DiceRoller/Grammar/DiceGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from DiceGrammarParser.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Dice.Grammar {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class DiceGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T_IDENTIFIER=1, T_GLOBAL_IDENTIFIER=2, T_NUMBER=3, T_MACRO=4, T_EQUALS=5, 
		T_GREATER=6, T_LESS=7, T_GREATER_EQUALS=8, T_LESS_EQUALS=9, T_NOT_EQUALS=10, 
		T_LPAREN=11, T_RPAREN=12, T_LBRACE=13, T_RBRACE=14, T_COMMA=15, T_DOT=16, 
		T_PLUS=17, T_MINUS=18, T_MULTIPLY=19, T_DIVIDE=20, WS=21, T_FUDGE=22, 
		T_D=23, T_KEEP_HIGH=24, T_KEEP_LOW=25, T_DROP_HIGH=26, T_DROP_LOW=27, 
		T_ADVANTAGE=28, T_DISADVANTAGE=29, T_REROLL=30, T_REROLL_ONCE=31, T_EXPLODE=32, 
		T_COMPOUND=33, T_PENETRATE=34, T_CRIT=35, T_CRITFAIL=36, T_FAIL=37, T_SORT_ASC=38, 
		T_SORT_DESC=39, AN_WS=40;
	public const int
		RULE_input = 0, RULE_math_expr = 1, RULE_add_expr = 2, RULE_mult_expr = 3, 
		RULE_roll_expr = 4, RULE_func_expr = 5, RULE_unary_expr = 6, RULE_number_expr = 7, 
		RULE_number = 8, RULE_global_function = 9, RULE_group_function = 10, RULE_basic_function = 11, 
		RULE_function_arg = 12, RULE_grouped_roll_inner = 13, RULE_grouped_extras = 14, 
		RULE_basic_extras = 15, RULE_keep_expr = 16, RULE_reroll_expr = 17, RULE_explode_expr = 18, 
		RULE_success_expr = 19, RULE_compare_expr = 20, RULE_explicit_compare_expr = 21, 
		RULE_sort_expr = 22, RULE_crit_expr = 23;
	public static readonly string[] ruleNames = {
		"input", "math_expr", "add_expr", "mult_expr", "roll_expr", "func_expr", 
		"unary_expr", "number_expr", "number", "global_function", "group_function", 
		"basic_function", "function_arg", "grouped_roll_inner", "grouped_extras", 
		"basic_extras", "keep_expr", "reroll_expr", "explode_expr", "success_expr", 
		"compare_expr", "explicit_compare_expr", "sort_expr", "crit_expr"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'F'", "'d'", 
		"'kh'", "'kl'", "'dh'", "'dl'", "'ad'", "'da'", "'rr'", "'ro'", "'!e'", 
		"'!c'", "'!p'", "'cs'", "'cf'", "'f'", "'sa'", "'sd'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "T_IDENTIFIER", "T_GLOBAL_IDENTIFIER", "T_NUMBER", "T_MACRO", "T_EQUALS", 
		"T_GREATER", "T_LESS", "T_GREATER_EQUALS", "T_LESS_EQUALS", "T_NOT_EQUALS", 
		"T_LPAREN", "T_RPAREN", "T_LBRACE", "T_RBRACE", "T_COMMA", "T_DOT", "T_PLUS", 
		"T_MINUS", "T_MULTIPLY", "T_DIVIDE", "WS", "T_FUDGE", "T_D", "T_KEEP_HIGH", 
		"T_KEEP_LOW", "T_DROP_HIGH", "T_DROP_LOW", "T_ADVANTAGE", "T_DISADVANTAGE", 
		"T_REROLL", "T_REROLL_ONCE", "T_EXPLODE", "T_COMPOUND", "T_PENETRATE", 
		"T_CRIT", "T_CRITFAIL", "T_FAIL", "T_SORT_ASC", "T_SORT_DESC", "AN_WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DiceGrammarParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DiceGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DiceGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DiceGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class InputContext : ParserRuleContext {
		public Math_exprContext math_expr() {
			return GetRuleContext<Math_exprContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(DiceGrammarParser.Eof, 0); }
		public InputContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_input; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterInput(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitInput(this);
		}
	}

	[RuleVersion(0)]
	public InputContext input() {
		InputContext _localctx = new InputContext(Context, State);
		EnterRule(_localctx, 0, RULE_input);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; math_expr();
			State = 49; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Math_exprContext : ParserRuleContext {
		public Math_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_math_expr; } }
	 
		public Math_exprContext() { }
		public virtual void CopyFrom(Math_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class MathNormalContext : Math_exprContext {
		public Add_exprContext add_expr() {
			return GetRuleContext<Add_exprContext>(0);
		}
		public MathNormalContext(Math_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterMathNormal(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitMathNormal(this);
		}
	}

	[RuleVersion(0)]
	public Math_exprContext math_expr() {
		Math_exprContext _localctx = new Math_exprContext(Context, State);
		EnterRule(_localctx, 2, RULE_math_expr);
		try {
			_localctx = new MathNormalContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 51; add_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Add_exprContext : ParserRuleContext {
		public Add_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_add_expr; } }
	 
		public Add_exprContext() { }
		public virtual void CopyFrom(Add_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class AddSubContext : Add_exprContext {
		public Add_exprContext add_expr() {
			return GetRuleContext<Add_exprContext>(0);
		}
		public ITerminalNode T_MINUS() { return GetToken(DiceGrammarParser.T_MINUS, 0); }
		public Mult_exprContext mult_expr() {
			return GetRuleContext<Mult_exprContext>(0);
		}
		public AddSubContext(Add_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterAddSub(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitAddSub(this);
		}
	}
	public partial class AddNoneContext : Add_exprContext {
		public Mult_exprContext mult_expr() {
			return GetRuleContext<Mult_exprContext>(0);
		}
		public AddNoneContext(Add_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterAddNone(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitAddNone(this);
		}
	}
	public partial class AddAddContext : Add_exprContext {
		public Add_exprContext add_expr() {
			return GetRuleContext<Add_exprContext>(0);
		}
		public ITerminalNode T_PLUS() { return GetToken(DiceGrammarParser.T_PLUS, 0); }
		public Mult_exprContext mult_expr() {
			return GetRuleContext<Mult_exprContext>(0);
		}
		public AddAddContext(Add_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterAddAdd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitAddAdd(this);
		}
	}

	[RuleVersion(0)]
	public Add_exprContext add_expr() {
		return add_expr(0);
	}

	private Add_exprContext add_expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Add_exprContext _localctx = new Add_exprContext(Context, _parentState);
		Add_exprContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_add_expr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new AddNoneContext(_localctx);
			Context = _localctx;
			_prevctx = _localctx;

			State = 54; mult_expr(0);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 64;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 62;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
					case 1:
						{
						_localctx = new AddAddContext(new Add_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_add_expr);
						State = 56;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 57; Match(T_PLUS);
						State = 58; mult_expr(0);
						}
						break;
					case 2:
						{
						_localctx = new AddSubContext(new Add_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_add_expr);
						State = 59;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 60; Match(T_MINUS);
						State = 61; mult_expr(0);
						}
						break;
					}
					} 
				}
				State = 66;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Mult_exprContext : ParserRuleContext {
		public Mult_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mult_expr; } }
	 
		public Mult_exprContext() { }
		public virtual void CopyFrom(Mult_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class MultMultContext : Mult_exprContext {
		public Mult_exprContext mult_expr() {
			return GetRuleContext<Mult_exprContext>(0);
		}
		public ITerminalNode T_MULTIPLY() { return GetToken(DiceGrammarParser.T_MULTIPLY, 0); }
		public Roll_exprContext roll_expr() {
			return GetRuleContext<Roll_exprContext>(0);
		}
		public MultMultContext(Mult_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterMultMult(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitMultMult(this);
		}
	}
	public partial class MultNoneContext : Mult_exprContext {
		public Roll_exprContext roll_expr() {
			return GetRuleContext<Roll_exprContext>(0);
		}
		public MultNoneContext(Mult_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterMultNone(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitMultNone(this);
		}
	}
	public partial class MultDivContext : Mult_exprContext {
		public Mult_exprContext mult_expr() {
			return GetRuleContext<Mult_exprContext>(0);
		}
		public ITerminalNode T_DIVIDE() { return GetToken(DiceGrammarParser.T_DIVIDE, 0); }
		public Roll_exprContext roll_expr() {
			return GetRuleContext<Roll_exprContext>(0);
		}
		public MultDivContext(Mult_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterMultDiv(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitMultDiv(this);
		}
	}

	[RuleVersion(0)]
	public Mult_exprContext mult_expr() {
		return mult_expr(0);
	}

	private Mult_exprContext mult_expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Mult_exprContext _localctx = new Mult_exprContext(Context, _parentState);
		Mult_exprContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_mult_expr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new MultNoneContext(_localctx);
			Context = _localctx;
			_prevctx = _localctx;

			State = 68; roll_expr();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 78;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 76;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						_localctx = new MultMultContext(new Mult_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_mult_expr);
						State = 70;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 71; Match(T_MULTIPLY);
						State = 72; roll_expr();
						}
						break;
					case 2:
						{
						_localctx = new MultDivContext(new Mult_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_mult_expr);
						State = 73;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 74; Match(T_DIVIDE);
						State = 75; roll_expr();
						}
						break;
					}
					} 
				}
				State = 80;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Roll_exprContext : ParserRuleContext {
		public Roll_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_roll_expr; } }
	 
		public Roll_exprContext() { }
		public virtual void CopyFrom(Roll_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class RollNoneContext : Roll_exprContext {
		public Func_exprContext func_expr() {
			return GetRuleContext<Func_exprContext>(0);
		}
		public RollNoneContext(Roll_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterRollNone(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitRollNone(this);
		}
	}
	public partial class RollGroupContext : Roll_exprContext {
		public ITerminalNode T_LBRACE() { return GetToken(DiceGrammarParser.T_LBRACE, 0); }
		public Grouped_roll_innerContext grouped_roll_inner() {
			return GetRuleContext<Grouped_roll_innerContext>(0);
		}
		public ITerminalNode T_RBRACE() { return GetToken(DiceGrammarParser.T_RBRACE, 0); }
		public Unary_exprContext unary_expr() {
			return GetRuleContext<Unary_exprContext>(0);
		}
		public Grouped_extrasContext[] grouped_extras() {
			return GetRuleContexts<Grouped_extrasContext>();
		}
		public Grouped_extrasContext grouped_extras(int i) {
			return GetRuleContext<Grouped_extrasContext>(i);
		}
		public Group_functionContext[] group_function() {
			return GetRuleContexts<Group_functionContext>();
		}
		public Group_functionContext group_function(int i) {
			return GetRuleContext<Group_functionContext>(i);
		}
		public RollGroupContext(Roll_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterRollGroup(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitRollGroup(this);
		}
	}
	public partial class RollBasicContext : Roll_exprContext {
		public ITerminalNode T_D() { return GetToken(DiceGrammarParser.T_D, 0); }
		public Number_exprContext number_expr() {
			return GetRuleContext<Number_exprContext>(0);
		}
		public Unary_exprContext unary_expr() {
			return GetRuleContext<Unary_exprContext>(0);
		}
		public Basic_extrasContext[] basic_extras() {
			return GetRuleContexts<Basic_extrasContext>();
		}
		public Basic_extrasContext basic_extras(int i) {
			return GetRuleContext<Basic_extrasContext>(i);
		}
		public Basic_functionContext[] basic_function() {
			return GetRuleContexts<Basic_functionContext>();
		}
		public Basic_functionContext basic_function(int i) {
			return GetRuleContext<Basic_functionContext>(i);
		}
		public RollBasicContext(Roll_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterRollBasic(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitRollBasic(this);
		}
	}
	public partial class RollFudgeContext : Roll_exprContext {
		public ITerminalNode T_D() { return GetToken(DiceGrammarParser.T_D, 0); }
		public ITerminalNode T_FUDGE() { return GetToken(DiceGrammarParser.T_FUDGE, 0); }
		public Unary_exprContext[] unary_expr() {
			return GetRuleContexts<Unary_exprContext>();
		}
		public Unary_exprContext unary_expr(int i) {
			return GetRuleContext<Unary_exprContext>(i);
		}
		public Basic_extrasContext[] basic_extras() {
			return GetRuleContexts<Basic_extrasContext>();
		}
		public Basic_extrasContext basic_extras(int i) {
			return GetRuleContext<Basic_extrasContext>(i);
		}
		public Basic_functionContext[] basic_function() {
			return GetRuleContexts<Basic_functionContext>();
		}
		public Basic_functionContext basic_function(int i) {
			return GetRuleContext<Basic_functionContext>(i);
		}
		public RollFudgeContext(Roll_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.EnterRollFudge(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDiceGrammarParserListener typedListener = listener as IDiceGrammarParserListener;
			if (typedListener != null) typedListener.ExitRollFudge(this);
		}
	}

	[RuleVersion(0)]
	public Roll_exprContext roll_expr() {
		Roll_exprContext _localctx = new Roll_exprContext(Context, State);
		EnterRule(_localctx, 8, RULE_roll_expr);
		int _la;
		try {
			int _alt;
			State = 137;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,14,Context) ) {
			case 1:
				_localctx = new RollGroupContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T_NUMBER) | (1L << T_MACRO) | (1L << T_LPAREN) | (1L << T_MINUS))) != 0)) {
					{
					State = 81; unary_expr();
					}
				}

				State = 84; Match(T_LBRACE);
				State = 85; grouped_roll_inner(0);
				State = 86; Match(T_RBRACE);
				State = 90;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 87; grouped_extras();
						}
						} 
					}
					State = 92;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
				}
				State = 96;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 93; group_function();
						}
						} 
					}
					State = 98;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
				}
				}
				break;
			case 2:
				_localctx = new RollBasicContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T_NUMBER) | (1L << T_MACRO) | (1L << T_LPAREN) | (1L << T_MINUS))) != 0)) {
					{
					State = 99; unary_expr();
					}
				}

				State = 102; Match(T_D);
				State = 103; number_expr();
				State = 107;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 104; basic_extras();
						}
						} 
					}
					State = 109;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
				}
				State = 113;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 110; basic_function();
						}
						} 
					}
					State = 115;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
				}
				}
				break;
			case 3:
				_localctx = new RollFudgeContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 117;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T_NUMBER) | (1L << T_MACRO) | (1L << T_LPAREN) | (1L << T_MINUS))) != 0)) {
					{
					State = 116; unary_expr();
					}
				}

				State = 119; Match(T_D);
				State = 120; Match(T_FUDGE);
				State = 122;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
				case 1:
					{
					State = 121; unary_expr();
					}
					break;
				}
				State = 127;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 124; basic_extras();
						}
						} 
					}
					State = 129;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
				}
				State = 133;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,13,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 130; basic_function();
						}
						} 
					}
					State = 135;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,13,Context);
				}
				}
				break;
			case 4:
				_localctx = new RollNoneContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 136; func_expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
